--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2015-08-08 Sat 21:18 -->
+<!-- 2016-01-20 Wed 22:36 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <title>Marginally Interesting&#x2026;</title>
@@ -17,9 +17,8 @@
 <header><p><a href="index.html">home</a>&emsp;<a href="about.html">about</a></p><noscript><p>&#x2026;please enable javascript for additional functions&#x2026;</p></noscript></header>
 </div>
 <div id="content">
-<header>
 <h1 class="title">Marginally Interesting&#x2026;</h1>
-</header><div id="outline-container-orgheadline3" class="outline-2">
+<div id="outline-container-orgheadline3" class="outline-2">
 <h2 id="orgheadline3">Posts</h2>
 <div class="outline-text-2" id="text-orgheadline3">
 </div><div id="outline-container-orgheadline1" class="outline-3">
