remove leftover debugging text

--- a/sicp.html
+++ b/sicp.html
@@ -123,14 +123,7 @@ and neither worked through the (many) exercises.</div></div>
 <div class="footdef"><sup><a id="fn.2" class="footnum" href="#fnr.2">2</a></sup> <div class="footpara">It is <i>not</i>
 a book about functional programming.  But it does give you a good idea
 of what is great about functional programming, and why it is great, and
-    why and when you might still want to do things differently.
-
-    <p>Another paragraph. a book about functional programming.  But it does
-give you a good idea of what is great about functional programming, and
-why it is great, and why and when you might still want to do things
-differently.
-</p>
-</div></div>
+why and when you might still want to do things differently.</div></div>
 
 <div class="footdef"><sup><a id="fn.3" class="footnum" href="#fnr.3">3</a></sup> <div class="footpara">Maybe to prove his point, some of the
 ensuing comments not only get almost every aspect of this book wrong,
